--- a/frontend/src/components/Menu.css
+++ b/frontend/src/components/Menu.css
@@ -1,11 +1,23 @@
 .menu {
+  grid-area: Menu;
+  background-color: #fff;
+  box-shadow: 12px 7px 19px 1px #00000013;
+  z-index: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media (max-width: 767px) {
+  .menu {
+    background-color: var(--color-1);
     grid-area: Menu;
-    background-color: #fff;
-    box-shadow: 12px 7px 19px 1px #00000013;
-    z-index: 1;
-    height: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+  }
 }
 
